<resources>
    <string name="app_name">SimpleCRUD</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="product_list">Product List</string>
    <string name="is_bought">Is Bought</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="add_delete">Add/Delete</string>
    <string name="myapplication">MyApplication</string>
    <string name="list_products">List products</string>
    <string name="save">Save</string>
    <string name="default_values">Default values</string>
    <string name="options">Options</string>
    <string name="font_size">Font size</string>
    <string name="theme">Theme</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="number">number</string>
    <string name="chosen_theme">Chosen Theme:</string>
    <string name="chosen_font">Chosen Font:</string>
    <string name="update">Update</string>
    <string name="chosen_id">Chosen Id</string>
    <string name="id_of_element_to_modify">Id of element to modify</string>
    <string name="small_font">Small Font</string>
    <string name="large_font">Large Font</string>
    <string name="font">Font</string>
    <!--    <string name="textview">TextView</string>-->
    <string name="addProduct">add</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="button">Button</string>
    <string name="register">Register</string>
    <string name="public_list">Public List</string>
    <string name="private_list">Private List</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="maps">Maps</string>
    <string name="shop_list">Shop list</string>
    <string name="textview">TextView</string>
    <string name="shop_name">Shop name</string>
    <string name="shop_description">Shop description</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="radius">Radius</string>
    <string name="list_shops">List Shops</string>
    <string name="channelID">channelPA</string>
    <string name="channelName">Shop channel</string>
    <string name="appwidget_text">Widget text</string>
    <string name="add_widget">Add widget</string>
    <string name="website">Website</string>
    <string name="smt">smt</string>
    <string name="action1">com.barto.simplecrud.action1</string>
    <string name="action2">com.barto.simplecrud.action2</string>
    <string name="action3">com.barto.simplecrud.action3</string>

    <string name="image">image</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>

</resources>