<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="159dp"
            android:layout_marginTop="572dp"
            android:layout_marginEnd="159dp"
            android:layout_marginBottom="17dp"
            android:text="@string/save"
            app:layout_constraintBottom_toTopOf="@+id/button_defaultValues"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_defaultValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="159dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="159dp"
            android:layout_marginBottom="138dp"
            android:text="@string/default_values"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_save" />

        <TextView
            android:id="@+id/tv_fontDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginTop="60dp"
            android:text="@string/font_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="40dp"
            android:text="@string/theme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_font" />

        <Button
            android:id="@+id/bt_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="16dp"
            android:text="@string/red"
            app:layout_constraintStart_toEndOf="@+id/tv_theme"
            app:layout_constraintTop_toBottomOf="@+id/font1" />

        <Button
            android:id="@+id/bt_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="71dp"
            android:text="@string/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bt_red"
            app:layout_constraintTop_toBottomOf="@+id/font2" />

        <TextView
            android:id="@+id/tv_chosenTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="48dp"
            android:text="@string/chosen_theme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_chosenFont" />

        <TextView
            android:id="@+id/tv_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="214dp"
            android:layout_marginEnd="234dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_chosenTheme"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/font1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="64dp"
            android:text="@string/small_font"
            app:layout_constraintStart_toEndOf="@+id/tv_font"
            app:layout_constraintTop_toBottomOf="@+id/tv_chosenTheme" />

        <Button
            android:id="@+id/font2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="297dp"
            android:layout_marginEnd="33dp"
            android:text="@string/large_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/font1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_chosenFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="147dp"
            android:text="@string/chosen_font"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_choiceFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginTop="147dp"
            android:layout_marginEnd="234dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_chosenFont"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="81dp"
            android:text="@string/font"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_chosenTheme" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>