<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dp"
            android:layout_marginTop="133dp"
            android:layout_marginEnd="172dp"
            android:text="@string/myapplication"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="332dp"
            android:layout_marginEnd="23dp"
            android:text="@string/list_products"
            app:layout_constraintEnd_toStartOf="@+id/bt_shopList"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv1" />

        <Button
            android:id="@+id/button_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/options"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <TextView
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginTop="182dp"
            android:layout_marginEnd="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv1" />

        <Button
            android:id="@+id/bt_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:text="@string/logout"
            app:layout_constraintStart_toEndOf="@+id/button_options"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <Button
            android:id="@+id/bt_maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="24dp"
            android:text="@string/maps"
            app:layout_constraintStart_toEndOf="@+id/bt_logout"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <Button
            android:id="@+id/bt_shopList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="332dp"
            android:layout_marginEnd="16dp"
            android:text="@string/list_shops"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>